# EnlilOS

./: .gitignore  BACKLOG.md  BACKLOG2.md  BACKLOG3.md  CLAUDE.md  M11-01-GAP.md  M11-01.md  M11-01bc.md  M11-02.md  Makefile  README.md  linker.ld  progress.txt
.claude/: settings.local.json
boot/: boot.S  vectors.S
docs/: ARCHITETTURA_TARGET_ENLILOS.md  STUDIO_SCHEDULER_EDF_NAS.md
drivers/: blk.c  framebuffer.c  keyboard.c  mouse.c  net.c  uart.c
include/: ane.h  blk.h  blk_ipc.h  cap.h  crt_runtime.h  elf_loader.h  exception.h  ext4.h  framebuffer.h  futex.h  gic.h  gpu.h  initrd.h  kdebug.h  keyboard.h  kheap.h  kmon.h  ksem.h  linux_compat.h  microkernel.h  mmu.h  mouse.h  mreact.h  net.h  net_ipc.h  pmm.h  procfs.h  psci.h  pty.h  rlimit.h  sched.h  selftest.h  shutdown.h  signal.h  sock.h  syscall.h  sysv_ipc.h  term80.h  termios.h  timer.h  (+9 more)
initrd/: BOOT.TXT  README.TXT  arksh_user_rc  arkshrc  group  hello_manifest.toon  hostname  hosts  it.map  ld_so_cache  os-release  passwd  us.map
kernel/: ane_syscall.c  cap.c  elf_loader.c  exception.c  ext4.c  futex.c  gic.c  gpu_syscall.c  initrd.c  kdebug.c  kheap.c  kmon.c  ksem.c  ksyms_stub.c  main.c  microkernel.c  mmu.c  mreact.c  pmm.c  procfs.c  psci.c  pty.c  sched.c  sched_switch.S  selftest.c  shutdown.c  signal.c  sock.c  string.c  syscall.c  sysv_ipc.c  term80.c  timer.c  tty.c  utf8.c  vfs.c  vmm.c
toolchain/cmake-smoke/: CMakeLists.txt  main.c
tools/: enlilos-aarch64.cmake  gen_ksyms.py  mkinitrd.py  stage_linux_compat.py
user/: arksh_plugin_enlil.c  blkd.c  bundle_dyn.c  cap_demo.c  crt1.c  (+34 more)
(+116 files in other folders)
